SERVER-56644 Create oplog views for resharding and tenant migration on startup

(cherry picked from commit c6e8fed25eaa9ca8fa43517ad8dca9d74308274f)