src/mongo/db/mongod_main.cpp
@@ -144,6 +144,7 @@
 #include "mongo/db/s/resharding/resharding_donor_service.h"
 #include "mongo/db/s/resharding/resharding_op_observer.h"
 #include "mongo/db/s/resharding/resharding_recipient_service.h"
+#include "mongo/db/s/resharding_util.h"
 #include "mongo/db/s/shard_server_op_observer.h"
 #include "mongo/db/s/sharding_ddl_coordinator_service.h"
 #include "mongo/db/s/sharding_initialization_mongod.h"
@@ -710,6 +711,13 @@ ExitCode _initAndListen(ServiceContext* serviceContext, int listenPort) {
 
         if (replSettings.usingReplSets() || !gInternalValidateFeaturesAsPrimary) {
             serverGlobalParams.validateFeaturesAsPrimary.store(false);
+        }
+
+        if (replSettings.usingReplSets()) {
+            Lock::GlobalWrite lk(startupOpCtx.get());
+            OldClientContext ctx(startupOpCtx.get(), NamespaceString::kRsOplogNamespace.ns());
+            createSlimOplogView(startupOpCtx.get(), ctx.db());
+            tenant_migration_util::createOplogViewForTenantMigrations(startupOpCtx.get(), ctx.db());
         }
     }
 
